# cli-ai-assistant

./: .gitignore  README.md  pyproject.toml
src/cli_ai_assistant/: __init__.py  environment.py  executor.py  main.py  prompts.py  providers.py
tests/: conftest.py  test_main.py
