[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-ai-assistant"
version = "0.1.0"
description = "Natural language CLI assistant for AWS, kubectl, docker, and git commands"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nova", email = "supernova53@github.com" }
]
keywords = ["cli", "ai", "assistant", "aws", "kubectl", "docker", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai = "cli_ai_assistant.main:cli"
ask = "cli_ai_assistant.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_ai_assistant"]

[tool.hatch.build.targets.sdist]
include = ["src/cli_ai_assistant"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
